added: dark mode in third page (In progress)

--- a/choosecar.html
+++ b/choosecar.html
@@ -207,7 +207,7 @@
     <!-- Navbar Ends here -->
 
     <!-- Content Section Starts Here -->
-    <div class="bg-grey-eight px-4 py-2 dark:bg-dark-background-color">
+    <div class="bg-grey-eight px-4 py-2 mb-18 dark:bg-dark-background-color">
       <!-- Import your car starts -->
       <div class="flex justify-between">
         <div>
@@ -337,7 +337,9 @@
         <!-- Table of Cars Starts here -->
         <div class="overflow-x-auto w-full mt-3">
           <table class="min-w-full divide-y divide-gray-200">
-            <thead class="bg-gray-50 dark:bg-[#151B23] dark:border dark:border-dark-grey-six">
+            <thead
+              class="bg-gray-50 dark:bg-[#151B23] dark:border dark:border-dark-grey-six"
+            >
               <tr>
                 <!-- 1: Select All Checkbox -->
                 <th
