--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -288,7 +288,7 @@
             name=""
             id="searchCstmrEmail"
             placeholder="Search customer by email"
-            class="border border-grey-six rounded text-sm w-64 py-1 pl-3 placeholder:text-grey-six text-grey-three outline-none placeholder:font-light dark:border-dark-grey-six dark:text-dark-grey-two"
+            class="border border-grey-six rounded text-sm w-64 py-1 pl-3 placeholder:text-grey-six text-grey-three outline-none placeholder:font-light dark:border-dark-grey-six dark:text-dark-grey-two dark:placeholder:text-grey-three"
           />
 
           <button
@@ -311,10 +311,14 @@
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Purchased
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     0 car's
                   </p>
                 </div>
@@ -322,49 +326,71 @@
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Issued PI
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">2</p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    2
+                  </p>
                 </div>
 
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Percentage Booking Rate
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     0.00%
                   </p>
                 </div>
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Avg. $Discount
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     0.00 USD
                   </p>
                 </div>
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Credit Sales
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     Not Approved
                   </p>
                 </div>
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Last Purchased Date
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     None
                   </p>
                 </div>
@@ -374,10 +400,14 @@
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Deposit
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     0.00 USD
                   </p>
                 </div>
@@ -385,47 +415,71 @@
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Customer Bank
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">NW</p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    NW
+                  </p>
                 </div>
 
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Reservation Period
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     48 hrs (Default)
                   </p>
                 </div>
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     PI Discard Rate
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">0%</p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    0%
+                  </p>
                 </div>
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     Sub Rep
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     None
                   </p>
                 </div>
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
                 >
-                  <p class="w-full text-grey-two font-medium text-[15px]">
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
                     PayPal
                   </p>
-                  <p class="w-full text-[15px] text-grey-two font-light">
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
                     Enable
                   </p>
                 </div>
@@ -438,21 +492,25 @@
             <div class="grid grid-cols-3 items-center gap-x-3 grid-rows-3">
               <!-- customer name starts -->
               <div class="w-full">
-                <label for="cstmrName" class="text-sm text-grey-two"
+                <label
+                  for="cstmrName"
+                  class="text-sm text-grey-two dark:text-dark-grey-four-color"
                   >Customer Name <span class="text-red-700">*</span>
                 </label>
                 <input
                   id="cstmrName"
                   type="text"
                   placeholder="Enter Customer Name"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six"
                 />
               </div>
               <!-- Customer name ends here -->
 
               <!-- Entity Types Starts -->
               <div>
-                <p class="text-sm text-grey-two">Entity Type</p>
+                <p class="text-sm text-grey-two dark:text-dark-grey-four-color">
+                  Entity Type
+                </p>
                 <div class="flex space-x-4 items-center py-1.5">
                   <div class="flex gap-x-2">
                     <input
@@ -460,9 +518,12 @@
                       id="cstrunset"
                       value="unset"
                       name="entity"
-                      class="checked:accent-primary-color"
+                      class="checked:accent-primary-color dark:checked:accent-dark-primary-color"
                     />
-                    <label for="cstrunset" class="gap-x-1 text-sm">
+                    <label
+                      for="cstrunset"
+                      class="gap-x-1 text-sm dark:text-dark-grey-four-color"
+                    >
                       Unset
                     </label>
                   </div>
@@ -472,9 +533,12 @@
                       id="cstrindividual"
                       value="individual"
                       name="entity"
-                      class="checked:accent-primary-color"
+                      class="checked:accent-primary-color dark:checked:accent-dark-primary-color"
                     />
-                    <label for="cstrindividual" class="gap-x-1 text-sm">
+                    <label
+                      for="cstrindividual"
+                      class="gap-x-1 text-sm dark:text-dark-grey-four-color"
+                    >
                       Individual
                     </label>
                   </div>
@@ -484,9 +548,12 @@
                       id="cstrcorporation"
                       value="corporation"
                       name="entity"
-                      class="checked:accent-primary-color"
+                      class="checked:accent-primary-color dark:checked:accent-dark-primary-color"
                     />
-                    <label for="cstrcorporation" class="gap-x-1 text-sm">
+                    <label
+                      for="cstrcorporation"
+                      class="gap-x-1 text-sm dark:text-dark-grey-four-color"
+                    >
                       Corporation
                     </label>
                   </div>
@@ -496,7 +563,9 @@
 
               <!-- Date of Birth starts-->
               <div>
-                <p class="text-sm text-grey-two">Date of Birth</p>
+                <p class="text-sm text-grey-two dark:text-dark-grey-four-color">
+                  Date of Birth
+                </p>
 
                 <div class="flex gap-x-2">
                   <!-- Year Starts -->
@@ -504,7 +573,7 @@
                     <div class="relative mt-1">
                       <select
                         name="searchMake"
-                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                       >
                         <option value="" class="text-grey-six text-sm">
                           Year
@@ -537,7 +606,7 @@
                     <div class="relative mt-1">
                       <select
                         name="searchMake"
-                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                       >
                         <option value="" class="text-grey-six text-sm">
                           Month
@@ -570,7 +639,7 @@
                     <div class="relative mt-1">
                       <select
                         name="searchMake"
-                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                        class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                       >
                         <option value="" class="text-grey-six text-sm">
                           Date
@@ -605,21 +674,25 @@
 
               <!-- Tin Number starts -->
               <div class="w-full mt-2">
-                <label for="cstmrTIN" class="text-sm text-grey-two"
+                <label
+                  for="cstmrTIN"
+                  class="text-sm text-grey-two dark:text-dark-grey-four-color"
                   >TIN <span class="text-red-700">*</span>
                 </label>
                 <input
                   type="text"
                   id="cstmrTIN"
-                  placeholder="Enter Customer Name"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three"
+                  placeholder="Enter Tin"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six"
                 />
               </div>
               <!-- TIN ends here -->
 
               <!-- Country Starts here -->
               <div class="w-full mt-2">
-                <label for="cstrcountryname" class="text-sm text-grey-two"
+                <label
+                  for="cstrcountryname"
+                  class="text-sm text-grey-two dark:text-dark-grey-four-color"
                   >Country <span class="text-red-700">*</span>
                 </label>
                 <div class="relative mt-1">
@@ -655,14 +728,16 @@
 
               <!-- Cell Number starts -->
               <div class="w-full mt-2">
-                <label for="cstmrTelNumber" class="text-sm text-grey-two"
+                <label
+                  for="cstmrTelNumber"
+                  class="text-sm text-grey-two dark:text-dark-grey-four-color"
                   >Tel <span class="text-red-700">*</span>
                 </label>
                 <input
                   type="text"
                   id="cstmrTelNumber"
-                  placeholder="Enter Customer Name"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three"
+                  placeholder="Enter Customer Cell"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six"
                 />
               </div>
               <!-- Cell Number ends here -->
