--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -306,7 +306,7 @@
             >
               Customer Summary
             </p>
-            <div class="flex flex-col md:flex-row gap-x-3 mt-2">
+            <div class="flex flex-col xl:flex-row gap-x-3 mt-2">
               <div class="w-full">
                 <div
                   class="flex justify-between border-b border-b-[#e8e7e7] pb-2"
@@ -489,7 +489,9 @@
 
           <!-- Customer Summary Section End -->
           <form class="mt-3">
-            <div class="grid grid-cols-3 items-center gap-x-3 grid-rows-3">
+            <div
+              class="grid grid-cols-2 xl:grid-cols-3 items-center gap-x-3 grid-rows-3"
+            >
               <!-- customer name starts -->
               <div class="w-full">
                 <label
@@ -501,7 +503,7 @@
                   id="cstmrName"
                   type="text"
                   placeholder="Enter Customer Name"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- Customer name ends here -->
@@ -511,8 +513,8 @@
                 <p class="text-sm text-grey-two dark:text-dark-grey-four-color">
                   Entity Type
                 </p>
-                <div class="flex space-x-4 items-center py-1.5">
-                  <div class="flex gap-x-2">
+                <div class="flex space-x-1 lg:space-x-4 items-center py-1.5">
+                  <div class="flex gap-x-1 lg:gap-x-2">
                     <input
                       type="radio"
                       id="cstrunset"
@@ -522,12 +524,12 @@
                     />
                     <label
                       for="cstrunset"
-                      class="gap-x-1 text-sm dark:text-dark-grey-four-color"
+                      class="gap-x-1 text-xs lg:text-sm dark:text-dark-grey-four-color"
                     >
                       Unset
                     </label>
                   </div>
-                  <div class="flex gap-x-2">
+                  <div class="flex gap-x-1 lg:gap-x-2">
                     <input
                       type="radio"
                       id="cstrindividual"
@@ -537,12 +539,12 @@
                     />
                     <label
                       for="cstrindividual"
-                      class="gap-x-1 text-sm dark:text-dark-grey-four-color"
+                      class="gap-x-1 text-xs lg:text-sm dark:text-dark-grey-four-color"
                     >
                       Individual
                     </label>
                   </div>
-                  <div class="flex gap-x-2">
+                  <div class="flex gap-x-1 lg:gap-x-2">
                     <input
                       type="radio"
                       id="cstrcorporation"
@@ -552,7 +554,7 @@
                     />
                     <label
                       for="cstrcorporation"
-                      class="gap-x-1 text-sm dark:text-dark-grey-four-color"
+                      class="gap-x-1 text-xs lg:text-sm dark:text-dark-grey-four-color"
                     >
                       Corporation
                     </label>
@@ -683,7 +685,7 @@
                   type="text"
                   id="cstmrTIN"
                   placeholder="Enter Tin"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- TIN ends here -->
@@ -698,7 +700,7 @@
                 <div class="relative mt-1">
                   <select
                     name="cstrcountryname"
-                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                   >
                     <option value="" class="text-grey-six text-sm">
                       Select Country
@@ -737,20 +739,22 @@
                   type="text"
                   id="cstmrTelNumber"
                   placeholder="Enter Customer Cell"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- Cell Number ends here -->
 
               <!-- City Starts here -->
-              <div class="w-full mt-2">
-                <label for="cstrcityname" class="text-sm text-grey-two"
+              <div class="w-full mt-2.5">
+                <label
+                  for="cstrcityname"
+                  class="text-sm text-grey-two dark:text-dark-grey-four-color"
                   >City <span class="text-red-700">*</span>
                 </label>
                 <div class="relative mt-1">
                   <select
                     name="cstrcityname"
-                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none"
+                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                   >
                     <option value="" class="text-grey-six text-sm">
                       Select City
@@ -779,7 +783,7 @@
               <!-- City Ends here -->
 
               <!-- Customer Address starts -->
-              <div class="w-full mt-2 xl:col-span-2">
+              <div class="w-full mt-2.5 xl:col-span-2">
                 <label for="cstmrAddress" class="text-sm text-grey-two"
                   >Address <span class="text-red-700">*</span>
                 </label>
@@ -787,13 +791,11 @@
                   type="text"
                   id="cstmrAddress"
                   placeholder="Enter Customer Address"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- Customer Address ends here -->
             </div>
-
-            <div></div>
           </form>
         </div>
       </div>
@@ -803,26 +805,30 @@
 
     <!-- Footer Starts here -->
     <footer
-      class="fixed w-full bottom-0 z-20 bg-white py-3 px-4 flex justify-between items-center"
+      class="fixed w-full bottom-0 z-20 bg-white dark:bg-dark-background-color py-3 px-4 flex justify-between items-center"
     >
       <div class="w-2/3">
         <div class="flex items-center max-w-4xl">
           <!-- Step 1 -->
           <a
-            href="./index.html"
+            href="#"
             class="flex flex-row active items-center gap-x-1.5 cursor-pointer"
             data-step="1"
           >
             <div
-              class="rounded-full bg-primary-color h-6 w-6 flex items-center justify-center text-white"
+              class="rounded-full bg-primary-color dark:bg-dark-primary-color h-6 w-6 flex items-center justify-center text-white"
             >
               <p class="text-sm">1</p>
             </div>
-            <p class="text-sm text-grey-two hidden xl:block">Search for Cars</p>
+            <p
+              class="text-sm text-grey-two dark:text-dark-grey-two hidden xl:block"
+            >
+              Search for Cars
+            </p>
           </a>
 
           <!-- Connector Line -->
-          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+          <div class="h-0.5 bg-grey-seven dark:bg-white flex-1 mx-2"></div>
           <!-- Step 2 -->
           <a
             href="./choosecar.html"
@@ -830,15 +836,19 @@
             data-step="2"
           >
             <div
-              class="rounded-full bg-primary-color border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full dark:bg-dark-primary-color border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-white"
             >
               <p class="text-sm">2</p>
             </div>
-            <p class="text-sm text-grey-four hidden xl:block">Choose a Car</p>
+            <p
+              class="text-sm text-grey-four dark:text-dark-grey-four-color hidden xl:block"
+            >
+              Choose a Car
+            </p>
           </a>
 
           <!-- Connector Line -->
-          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+          <div class="h-0.5 bg-grey-seven dark:bg-white flex-1 mx-2"></div>
 
           <!-- Step 3 -->
           <a
@@ -847,17 +857,19 @@
             data-step="3"
           >
             <div
-              class="rounded-full bg-primary-color border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-white dark:bg-dark-primary-color"
             >
               <p class="text-sm">3</p>
             </div>
-            <p class="text-sm text-grey-four hidden xl:block">
+            <p
+              class="text-sm text-grey-four dark:text-dark-grey-four-color hidden xl:block"
+            >
               Select Customer
             </p>
           </a>
 
           <!-- Connector Line -->
-          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+          <div class="h-0.5 bg-grey-seven dark:bg-white flex-1 mx-2"></div>
 
           <!-- Step 4 -->
           <a
@@ -866,15 +878,19 @@
             data-step="4"
           >
             <div
-              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-[#3a3b3c]"
             >
               <p class="text-sm">4</p>
             </div>
-            <p class="text-sm text-grey-four hidden xl:block">Generate PI</p>
+            <p
+              class="text-sm text-grey-four dark:text-dark-grey-four-color hidden xl:block"
+            >
+              Generate PI
+            </p>
           </a>
 
           <!-- Connector Line -->
-          <div class="h-0.5 bg-grey-seven flex-1 mx-2"></div>
+          <div class="h-0.5 bg-grey-seven dark:bg-white flex-1 mx-2"></div>
 
           <!-- Step 5 -->
           <a
@@ -883,34 +899,31 @@
             data-step="5"
           >
             <div
-              class="rounded-full border border-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
+              class="rounded-full border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-[#3a3b3c]"
             >
               <p class="text-sm">5</p>
             </div>
-            <p class="text-sm text-grey-four hidden xl:block">Confirm PI</p>
+            <p
+              class="text-sm text-grey-four dark:text-dark-grey-four-color hidden xl:block"
+            >
+              Confirm PI
+            </p>
           </a>
         </div>
       </div>
       <div class="w-2/3 xl:w-1/3 flex gap-x-4 justify-end">
         <a
-          href="./choosecar.html"
-          class="bg-grey-seven rounded-[5px] px-6 py-2 group text-grey-three"
+          href="#"
+          class="bg-grey-seven dark:bg-[#23272a] rounded-[5px] px-6 py-2 group text-grey-three dark:text-[#d1d5db]"
         >
           <button class="cursor-pointer">Back</button>
         </a>
 
         <a
           href="#"
-          class="bg-green-color px-6 py-2 group rounded-[5px] text-white"
+          class="bg-primary-color dark:bg-dark-primary-color dark:text-grey-seven px-6 py-2 group rounded-[5px] text-white"
         >
-          <button class="cursor-pointer">Create Quote</button>
-        </a>
-
-        <a
-          href="#"
-          class="bg-primary-color px-6 py-2 group rounded-[5px] text-white"
-        >
-          <button class="cursor-pointer">Generate PI</button>
+          <button class="cursor-pointer">Search Cars</button>
         </a>
       </div>
     </footer>
