updated: footer and select tags

--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -503,7 +503,7 @@
                   id="cstmrName"
                   type="text"
                   placeholder="Enter Customer Name"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
+                  class="border border-grey-six w-full mt-1 outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- Customer name ends here -->
@@ -685,7 +685,7 @@
                   type="text"
                   id="cstmrTIN"
                   placeholder="Enter Tin"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
+                  class="border border-grey-six mt-1 w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- TIN ends here -->
@@ -700,7 +700,7 @@
                 <div class="relative mt-1">
                   <select
                     name="cstrcountryname"
-                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
+                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                   >
                     <option value="" class="text-grey-six text-sm">
                       Select Country
@@ -739,7 +739,7 @@
                   type="text"
                   id="cstmrTelNumber"
                   placeholder="Enter Customer Cell"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
+                  class="border border-grey-six w-full outline-none mt-1 rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:mt-1 dark:text-grey-six dark:border-dark-grey-six"
                 />
               </div>
               <!-- Cell Number ends here -->
@@ -754,7 +754,7 @@
                 <div class="relative mt-1">
                   <select
                     name="cstrcityname"
-                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
+                    class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
                   >
                     <option value="" class="text-grey-six text-sm">
                       Select City
@@ -784,14 +784,16 @@
 
               <!-- Customer Address starts -->
               <div class="w-full mt-2.5 xl:col-span-2">
-                <label for="cstmrAddress" class="text-sm text-grey-two"
+                <label
+                  for="cstmrAddress"
+                  class="text-sm text-grey-two dark:text-dark-grey-four-color"
                   >Address <span class="text-red-700">*</span>
                 </label>
                 <input
                   type="text"
                   id="cstmrAddress"
                   placeholder="Enter Customer Address"
-                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:text-grey-six dark:border-dark-grey-six"
+                  class="border border-grey-six w-full outline-none rounded px-2 placeholder:text-grey-six text-sm py-1.5 text-grey-three dark:placeholder:text-grey-three dark:text-grey-six dark:border-dark-grey-six mt-1"
                 />
               </div>
               <!-- Customer Address ends here -->
@@ -836,7 +838,7 @@
             data-step="2"
           >
             <div
-              class="rounded-full dark:bg-dark-primary-color border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-white"
+              class="rounded-full bg-primary-color dark:bg-dark-primary-color border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-white"
             >
               <p class="text-sm">2</p>
             </div>
@@ -857,7 +859,7 @@
             data-step="3"
           >
             <div
-              class="rounded-full border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-white dark:bg-dark-primary-color"
+              class="rounded-full border bg-primary-color border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-white dark:bg-dark-primary-color"
             >
               <p class="text-sm">3</p>
             </div>
