--- a/selectcustomer.html
+++ b/selectcustomer.html
@@ -813,7 +813,7 @@
         <div class="flex items-center max-w-4xl">
           <!-- Step 1 -->
           <a
-            href="#"
+            href="./index.html"
             class="flex flex-row active items-center gap-x-1.5 cursor-pointer"
             data-step="1"
           >
