--- a/generatePi.html
+++ b/generatePi.html
@@ -559,6 +559,18 @@
                       <input type="checkbox" id="piPreExportInsp" />
                       <span class="checkmark"></span>
                       Pre-export Inspection
+                      <div class="relative group pl-1">
+                        <!-- Hover wrapper around icon AND tooltip -->
+                        <div class="cursor-pointer">
+                          <img src="./assets/infoIcon.svg" class="w-4 h-4" />
+                        </div>
+                        <!-- Tooltip (now always part of hover area) -->
+                        <div
+                          class="absolute bottom-full left-1/2 -translate-x-1/2 w-max max-w-xs text-xs bg-primary-color text-white rounded px-2 py-1 opacity-0 invisible group-hover:visible group-hover:opacity-100 transition-opacity duration-200 z-10 pointer-events-auto"
+                        >
+                          This is the fee applied on top of the base price.
+                        </div>
+                      </div>
                     </label>
                     <label
                       class="custom-checkbox"
@@ -567,6 +579,18 @@
                       <input type="checkbox" id="piGovernmentRequirement" />
                       <span class="checkmark"></span>
                       Requirement by your Government
+                      <div class="relative group pl-1">
+                        <!-- Hover wrapper around icon AND tooltip -->
+                        <div class="cursor-pointer">
+                          <img src="./assets/infoIcon.svg" class="w-4 h-4" />
+                        </div>
+                        <!-- Tooltip (now always part of hover area) -->
+                        <div
+                          class="absolute bottom-full left-1/2 -translate-x-1/2 w-max max-w-xs text-xs bg-primary-color text-white rounded px-2 py-1 opacity-0 invisible group-hover:visible group-hover:opacity-100 transition-opacity duration-200 z-10 pointer-events-auto"
+                        >
+                          This is the fee applied on top of the base price.
+                        </div>
+                      </div>
                     </label>
                     <p class="text-xs mt-1 font-normal text-grey-four">
                       (Not Available)
